config/kongspringboot2-application-openshift.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kong-springboot2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong-springboot2
  template:
    metadata:
      labels:
        app: kong-springboot2
    spec:
      containers:
      - name: kong-springboot2
        image: leopeng1995/kongspringboot2:0.1
        ports:
        - containerPort: 8090
---

apiVersion: v1
kind: Service
metadata:
  name: kong-springboot2
  labels:
    app: kong-springboot2
spec:
  type: NodePort
  ports:
  - port: 8090
    targetPort: 8090
    protocol: TCP
    name: http
  selector:
    app: kong-springboot2

---
