config/kongadminapi-ingress-openshift.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kong-admin-api
spec:
  rules:
  - host: kong-admin.api
    http:
      paths:
      - path: /
        backend:
          serviceName: kong-admin
          servicePort: 8001
