config/kongspringboot-ingress-openshift.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kong-springboot
spec:
  rules:
  - host: kong.springboot
    http:
      paths:
      - path: /
        backend:
          serviceName: kong-springboot
          servicePort: 8080
